rework some structure worldgen
fix setting mkspawned after add world in mk spawn contexts, re-enable removing entities